--- a/client/utils/formFields.html
+++ b/client/utils/formFields.html
@@ -1,3 +1,9 @@
+<template name="__antiEntry__fMessage">
+  {{#if message}}
+    <div class="anti-entry-message">{{message}}</div>
+  {{/if}}
+</template>
+
 <template name="__antiEntry__fText">
 
   <div class="anti-entry-line">
