--- a/client/hub/antiEntryHubSignUp.html
+++ b/client/hub/antiEntryHubSignUp.html
@@ -1,5 +1,6 @@
 <template name="antiEntryHubSignUp">
   <form>
+    {{> __antiEntry__fMessage   message=message}}
     {{> __antiEntry__fText      name="username"   label="Username"  placeholder="Username"}}
     {{> __antiEntry__fText      name="email"      label="Email"     placeholder="Email"}}
     {{> __antiEntry__fPassword  name="password"   label="Password"  placeholder="Password"}}
