Added gravatar image to profile hub

--- a/client/profile/antiEntryProfileShow.html
+++ b/client/profile/antiEntryProfileShow.html
@@ -8,6 +8,10 @@
       {{#each currentUser.emails}}
         <div>{{address}}</div>
       {{/each}}
+      Gravatar:
+      <div>
+        <img src="{{ userGravatarUrl }}">
+      </div>
     </span>
   </div>
 </template>
