--- a/client/utils/formFields.html
+++ b/client/utils/formFields.html
@@ -25,8 +25,8 @@
 
 <template name="__antiEntry__fArea">
   <div class="anti-entry-line">
-    <label class="col-sm-2 control-label" for="{{id}}">{{label}}</label>
-    <div class="col-sm-10">
+    <label class="anti-entry-label" for="{{id}}">{{label}}</label>
+    <div class="anti-entry-field">
       <textarea class="form-control {{class}}" id="{{id}}" name="{{name}}" placeholder="{{placeholder}}"></textarea>
     </div>
   </div>
